<resources>
    <string name="app_name">TimezoneAlarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarms">AlarmsActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>


    <string name="pref_tz1_label">Timezone 1</string>
    <string name="pref_tz1_key" translatable="false">timezone1</string>
    <string name="pref_tz1_default" translatable="false">Europe/Amsterdam</string>


    <string name="pref_tz2_label">Timezone 2</string>
    <string name="pref_tz2_key" translatable="false">timezone2</string>
    <string name="pref_tz2_default" translatable="false">America/New_York</string>
</resources>
